--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ main{
   font-size: 20px;
   font-weight: 700;
   background-color: transparent;
+  border: 2px solid black;
 }
 .main .btn:hover{
   color: white;
